# libbitcask

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  TASK.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  a1_cache_bench.cpp  a2_wand_blockmax_bench.cpp  a4_field_intern_bench.cpp  analyzer_bench.cpp  cask_bench.cpp  checkpoint_bench.cpp  crc32_bench.cpp  gate_bench.cpp  hnsw_bench.cpp  index_pool_bench.cpp  intersect_u64_proto_bench.cpp  inverted_bench.cpp  keydir_bench.cpp  merge_bench.cpp
bench/baseline/: baseline.json
c_api/: bitcask_c.cpp  bitcask_c.h
cmake/: BitcaskSanitizers.cmake  tsan.supp
doc/: api-c.md  api-cpp.md  bool-search-intersection-zh.md  concurrency-zh.md  cpp-arch.md  cpp-optimization-zh.md  derived-compute-cache-design-zh.md  format-zh.md  getresult-view-design-zh.md  hnsw-design-zh.md  hnsw-external-storage-design-zh.md  hnsw-graph-construction-zh.md  hnsw-graph-theory-zh.md  hnsw-int8-only-design-zh.md  hnsw-lifecycle-zh.md  hnsw-memory-footprint-zh.md  hnsw-merge-gate-design-zh.md  hnsw-overview-zh.md  hybrid-parallel-design-zh.md  inoue-simd-intersection-zh.md  int8-vnni-v4-zh.md  intersect-kernel-internals-zh.md  keydir-sharding-design-zh.md  kway-blockmax-bmw-zh.md  libcask-extraction-zh.md  merge-io-tuning-design-zh.md  merge-policy-zh.md  meta-blob-residency-design-zh.md  migrate-le-en.md  migrate-le.md  open-merge-design-zh.md  ord-density-analysis-zh.md  ord-recycling-design-zh.md  posting-zero-copy-design-zh.md  put-flow-zh.md  read-handle-lru-design-zh.md  recovery-snapshot-design-zh.md  recovery-unified-checkpoint-design-zh.md  sealed-mmap-read-design-zh.md  simd-vnni-internals-zh.md  (+8 more)
docs/design/: async-index-pipeline.md  thread-safety.md
include/bitcask/: analyzer.hpp  bm25_kernels.hpp  byte_order.hpp  cask.hpp  cjk_detect.hpp  codec.hpp  data_file.hpp  field_schema.hpp  file_lock.hpp  format.hpp  fuzzy_matcher.hpp  highlighter.hpp  hint_file.hpp  hnsw.hpp  hw_crc32.hpp  index.hpp  intersect.hpp  inverted.hpp  inverted_wal.hpp  io.hpp  jieba_analyzer.hpp  keydir.hpp  keydir_registry.hpp  live_checker.hpp  merge_policy.hpp  merger.hpp  meta_codec.hpp  meta_file.hpp  meta_filter.hpp  migrate.hpp  myers.hpp  ngram_analyzer.hpp  porter_stemmer.hpp  query.hpp  search_cache.hpp  search_checkpoint.hpp  search_layer.hpp  stemming_analyzer.hpp  string_hash.hpp  synonym_map.hpp  (+5 more)
include/bitcask/detail/: .gitignore  file_fault.hpp  int8_kernels.hpp  scanner.hpp  stop_words.hpp  thread_local_buffer.hpp
src/bm25/: intersect.cpp  inverted.cpp  inverted_wal.cpp  query_parser.cpp
src/cask/: cask.cpp  meta_file.cpp
src/fileops/: codec.cpp  data_file.cpp  hint_file.cpp  migrate.cpp  scanner.cpp
src/io/: posix_file.cpp
src/keydir/: index.cpp  keydir.cpp  keydir_registry.cpp
src/lock/: file_lock.cpp
src/merge/: merge_policy.cpp  merger.cpp
src/search/: highlighter.cpp  search_cache.cpp  search_layer.cpp
src/text/: analyzer.cpp  jieba_analyzer.cpp
src/vector/: hnsw.cpp  hnsw_kernels.hpp
tests/: CMakeLists.txt  analyzer_test.cpp  c_api_test.c  cask_docvalue_test.cpp  checkpoint_recovery_test.cpp  codec_test.cpp  crash_recovery_test.cpp  data_file_test.cpp  file_lock_test.cpp  fuzzy_test.cpp  highlighter_test.cpp  hnsw_test.cpp  index_test.cpp  inverted_test.cpp  inverted_wal_test.cpp  jieba_analyzer_test.cpp  keydir_test.cpp  merge_concurrent_writer_test.cpp  porter_stemmer_test.cpp  posix_file_test.cpp  scanner_test.cpp  search_layer_test.cpp  smoke_test.cpp  stemming_analyzer_test.cpp  synonym_test.cpp  test_support.hpp  thread_pool_test.cpp  wildcard_test.cpp
tools/: gen_inert_table.cpp  migrate_le.cpp
