# GoogleTest via submodule (third_party/googletest)
if(NOT EXISTS "${CMAKE_SOURCE_DIR}/third_party/googletest/CMakeLists.txt")
    message(FATAL_ERROR
        "third_party/googletest 未初始化。请运行:\n"
        "  git submodule update --init third_party/googletest")
endif()
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
add_subdirectory("${CMAKE_SOURCE_DIR}/third_party/googletest"
                 "${CMAKE_BINARY_DIR}/_deps/googletest-build" EXCLUDE_FROM_ALL)

add_executable(bitcask_smoke_test smoke_test.cpp)
target_link_libraries(bitcask_smoke_test PRIVATE
    GTest::gtest_main
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_codec_test codec_test.cpp)
target_link_libraries(bitcask_codec_test PRIVATE
    GTest::gtest_main
    bitcask_format
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_posix_file_test posix_file_test.cpp)
target_link_libraries(bitcask_posix_file_test PRIVATE
    GTest::gtest_main
    bitcask_io
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_file_lock_test file_lock_test.cpp)
target_link_libraries(bitcask_file_lock_test PRIVATE
    GTest::gtest_main
    bitcask_io
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_index_test index_test.cpp)
target_link_libraries(bitcask_index_test PRIVATE
    GTest::gtest_main
    bitcask_index
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_data_file_test data_file_test.cpp)
target_link_libraries(bitcask_data_file_test PRIVATE
    GTest::gtest_main
    bitcask_fileops
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_scanner_test scanner_test.cpp)
target_link_libraries(bitcask_scanner_test PRIVATE
    GTest::gtest_main
    bitcask_fileops
    bitcask_warnings
    bitcask_sanitizers
)

# NOTE(V1): legacy 测试 keydir*/merge*/cask/NIF 已移除（见 cpp/CMakeLists.txt）。

add_executable(bitcask_analyzer_test analyzer_test.cpp)
target_link_libraries(bitcask_analyzer_test PRIVATE
    GTest::gtest_main
    bitcask_text
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_porter_stemmer_test porter_stemmer_test.cpp)
target_link_libraries(bitcask_porter_stemmer_test PRIVATE
    GTest::gtest_main
    bitcask_text
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_stemming_analyzer_test stemming_analyzer_test.cpp)
target_link_libraries(bitcask_stemming_analyzer_test PRIVATE
    GTest::gtest_main
    bitcask_text
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_inverted_test inverted_test.cpp)
target_link_libraries(bitcask_inverted_test PRIVATE
    GTest::gtest_main
    bitcask_bm25
    bitcask_text
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_jieba_analyzer_test jieba_analyzer_test.cpp)
target_link_libraries(bitcask_jieba_analyzer_test PRIVATE
    GTest::gtest_main
    bitcask_text
    bitcask_warnings
    bitcask_sanitizers
)
# 注入 cppjieba 词典目录的真实路径，替代源码里硬编码的 /tmp 旧构建路径。
target_compile_definitions(bitcask_jieba_analyzer_test PRIVATE
    BITCASK_JIEBA_DICT_DIR="${BITCASK_JIEBA_DICT_DIR}")

add_executable(bitcask_keydir_test keydir_test.cpp)
target_link_libraries(bitcask_keydir_test PRIVATE
    GTest::gtest_main
    bitcask_keydir
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_cask_docvalue_test cask_docvalue_test.cpp)
target_link_libraries(bitcask_cask_docvalue_test PRIVATE
    GTest::gtest_main
    bitcask_cask
    bitcask_warnings
    bitcask_sanitizers
)
target_compile_definitions(bitcask_cask_docvalue_test PRIVATE
    BITCASK_JIEBA_DICT_DIR="${BITCASK_JIEBA_DICT_DIR}")

add_executable(bitcask_crash_recovery_test crash_recovery_test.cpp)
target_link_libraries(bitcask_crash_recovery_test PRIVATE
    GTest::gtest_main
    bitcask_cask
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_inverted_wal_test inverted_wal_test.cpp)
target_link_libraries(bitcask_inverted_wal_test PRIVATE
    GTest::gtest_main
    bitcask_bm25
    bitcask_text
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_search_layer_test search_layer_test.cpp)
target_link_libraries(bitcask_search_layer_test PRIVATE
    GTest::gtest_main
    bitcask_search
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_highlighter_test highlighter_test.cpp)
target_link_libraries(bitcask_highlighter_test PRIVATE
    GTest::gtest_main
    bitcask_search
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_wildcard_test wildcard_test.cpp)
target_link_libraries(bitcask_wildcard_test PRIVATE
    GTest::gtest_main
    bitcask_bm25
    bitcask_search
    bitcask_text
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_synonym_test synonym_test.cpp)
target_link_libraries(bitcask_synonym_test PRIVATE
    GTest::gtest_main
    bitcask_search
    bitcask_text
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_fuzzy_test fuzzy_test.cpp)
target_link_libraries(bitcask_fuzzy_test PRIVATE
    GTest::gtest_main
    bitcask_bm25
    bitcask_search
    bitcask_text
    bitcask_warnings
    bitcask_sanitizers
)

add_executable(bitcask_hnsw_test hnsw_test.cpp)
target_link_libraries(bitcask_hnsw_test PRIVATE
    GTest::gtest_main
    bitcask_vector
    bitcask_warnings
    bitcask_sanitizers
)

include(GoogleTest)

# C1:TSan 下给所有测试注入 suppression 文件(见 cmake/tsan.supp 头注释:
# TBB 的 fence 同步对 TSan 不可见,插桩自编 oneTBB 后仍有残余假阳性)。
# 动态 libtsan 不回调二进制内的 __tsan_default_suppressions,env 是
# 唯一可靠通道。
# detect_deadlocks=1 固化(屏障 v2 验收门禁):KeyDir 屏障曾因同时持
# 257 把锁撞 TSan 死锁检测器 64 持锁硬上限崩溃,该开关保证回归可见。
set(_bitcask_test_props "")
if(BITCASK_SANITIZE MATCHES "thread")
    set(_bitcask_test_props PROPERTIES ENVIRONMENT
        "TSAN_OPTIONS=suppressions=${PROJECT_SOURCE_DIR}/cmake/tsan.supp:detect_deadlocks=1")
endif()
gtest_discover_tests(bitcask_smoke_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_codec_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_posix_file_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_file_lock_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_index_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_data_file_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_scanner_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_analyzer_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_porter_stemmer_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_stemming_analyzer_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_inverted_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_jieba_analyzer_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_keydir_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_cask_docvalue_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_crash_recovery_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_search_layer_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_inverted_wal_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_highlighter_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_wildcard_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_synonym_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_fuzzy_test ${_bitcask_test_props})
gtest_discover_tests(bitcask_hnsw_test ${_bitcask_test_props})

add_executable(bitcask_thread_pool_test thread_pool_test.cpp)
target_link_libraries(bitcask_thread_pool_test PRIVATE
    GTest::gtest_main
    bitcask_search
    bitcask_warnings
    bitcask_sanitizers
    TBB::tbb
)
gtest_discover_tests(bitcask_thread_pool_test ${_bitcask_test_props})

# ---------------------------------------------------------------------------
# C API smoke test — 纯 C, 链接 libbitcask.so (bitcask_shared)
# ---------------------------------------------------------------------------
enable_language(C)
add_executable(bitcask_c_api_test c_api_test.c)
target_link_libraries(bitcask_c_api_test PRIVATE bitcask_shared)
add_test(NAME CApi.SmokeTest COMMAND bitcask_c_api_test)
